Income fixes (duplicates, returned money, buttons optimizations)

--- a/execution/bot/Dockerfile
+++ b/execution/bot/Dockerfile
@@ -6,8 +6,14 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Create non-root user for security
+RUN adduser --disabled-password --gecos '' appuser
+
 # Copy application code
 COPY . .
+
+# Switch to non-root user
+USER appuser
 
 # Railway sets PORT automatically
 CMD uvicorn main:api --host 0.0.0.0 --port ${PORT:-8000}
